# dqev

./: .gitignore  Grover.ipynb  README.md  pyproject.toml
classic_on_quantum/: half_adder.ipynb  half_adder.py
first_qapp/: first_qapp.py
first_step/: Q_Hello_World.ipynb  first.py  tmp.py
grovers_algorithm/2qbits/: grovers_algorithm.py
grovers_algorithm/search_random_bits/: search_random_bits.py
old/first_qapp/: first_qapp.py
old/grovers_algorithm/hello_world/: grover_hello_world.py
old/grovers_algorithm/search_random_bits/: search_random_bits.py
old/quantum_random/: q_random.py
