[tool.poetry]
name = "qdev"
version = "0.1.0"
description = ""
authors = ["Beilak <beylak@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
qiskit = {extras = ["optimization"], version = "^0.43.0"}
pylatexenc = "^2.10"
matplotlib = "^3.7.1"
qiskit-ibm-provider = "^0.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
